samples/_failures_safe/1761639879_59b345_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24622aa7.c: In function ‘main’:
./samples/SAFE/__tmp_24622aa7.c:152:44: error: expected ‘)’ at end of input
  152 |         if (matrix_multiply(&a, &b, &result
      |                            ~               ^
      |                                            )
./samples/SAFE/__tmp_24622aa7.c:152:9: error: expected declaration or statement at end of input
  152 |         if (matrix_multiply(&a, &b, &result
      |         ^~
./samples/SAFE/__tmp_24622aa7.c:152:9: error: expected declaration or statement at end of input
